Preview bits stripped, some jdk methods implemented